# VSAT_pythonize

./: .gitignore  AUDIT.md  README.md  calc_drdv_and_sort.py  correct_dv.py  main.py  parameters.py  plotting.py  pyproject.toml  read_data.py
tests/: test_calc_drdv_and_sort.py  test_correct_dv.py  test_main.py  test_read_data.py
